--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content = "ie=edge">
         <link rel = "stylesheet" href = "style.css">
         <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
-        <title>Netflix - watch TV Shows Online, Watch Movies Online</title>
+        <title>My Netflix project</title>
     </head>
     <body>
         <header class="showcase">
